Add save method
