# swagger.json
@@ -7,15 +7,15 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3001/docs"
+      "url": "http://localhost:3001"
     }
   ],
   "apis": [
     "/Users/icenteno/Desktop/Microservicios-nodeJS/product-service/src/**/**/*.ts"
   ],
   "paths": {
-    "/productos/": {
-      "post": {
+    "/api/v1/products/": {
+      "get": {
         "description": "Get all Products",
         "tags": [
           "Products"
@@ -28,6 +28,131 @@
                 "example": {
                   "status": 200,
                   "message": "Products"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorTo"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorTo"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorTo"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorTo"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "description": "Post info from new products",
+        "tags": [
+          "Products"
+        ],
+        "requestBody": {
+          "description": "Create a new product",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ProductTo"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "number",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Save data successful"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/ProductTo"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorTo"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorTo"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorTo"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorTo"
                 }
               }
             }
@@ -59,7 +184,7 @@
   },
   "components": {
     "schemas": {
-      "Error": {
+      "ErrorTo": {
         "type": "object",
         "properties": {
           "errorCode": {
@@ -81,6 +206,31 @@
             "type": "string",
             "description": "Información sobre solución del error",
             "example": "http://info.com"
+          }
+        }
+      },
+      "ProductTo": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "description": "Id od product",
+            "example": 1
+          },
+          "name": {
+            "type": "string",
+            "description": "Name of product",
+            "example": "Este es el nombre de un producto"
+          },
+          "description": {
+            "type": "string",
+            "description": "Date of the promotion",
+            "example": "Esto es la descripción de un producto"
+          },
+          "qty": {
+            "type": "number",
+            "description": "Quantity of products",
+            "example": 10
           }
         }
       }
